# libcurl

./: CHANGES.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
#arch/: curl-8.14.1.zip.dsc.txt  curl-8.14.1_2-win32-mingw.zip.dsc.txt  curl-8.14.1_2-win64-mingw.zip.dsc.txt
docs/: index.rst
examples/: .run_one.cmd  .run_one.py  10-at-a-time.py  README.md  _diff_txt_.diff  address-scope.py  altsvc.py  anyauthput.py  block_ip.py.nok  cacertinmem.py  certinfo.py  chkspeed.py  connect-to.py  cookie_interface.py  crawler.py.nok  curl_setup.py  curl_utils.py  curlgtk.py  curltestutils.py  debug.py  default-scheme.py  ephiperfifo.py.nok  evhiperfifo.py.nok  externalsocket.py  fileupload.py  ftp-wildcard.py  ftpget.py  ftpgetinfo.py  ftpgetresp.py  ftpsget.py  ftpupload.py  ftpuploadfrommem.py  ftpuploadresume.py  getinfo.py  getinmemory.py  getredirect.py  getreferrer.py  ghiper.py.nok  headerapi.py  hiperfifo.py.nok  (+101 more)
examples/_todo/: crawler.py  curlx.py  ephiperfifo.py  evhiperfifo.py  ghiper.py  hiperfifo.py  htmltidy.py  multi-event.py  multi-legacy.py  multi-uv.py  smooth-gtk-thread.py  synctime.py
examples/examples.c/old/: fopen.c
examples/input/: debugit  file  index.html  uploadthis.txt
examples/old/: curlgtk.py  fopen.py.nok  opensslthreadlock.py.nok  rtsp.py.nok  sampleconv.py
src/libcurl/: __about__.py  __config__.py  __init__.py  _config.py  _curl.py  _curlver.py  _dll.py  _easy.py  _header.py  _mprintf.py  _multi.py  _options.py  _system.py  _typecheck.py  _urlapi.py  _websockets.py  libcurl.cfg
src/libcurl/_platform/: __init__.py
src/libcurl/_platform/_linux/: __init__.py
src/libcurl/_platform/_linux/x64/: libcurl.so.4  libnghttp2.so.14  librtmp.so.1
src/libcurl/_platform/_linux/x86/: libcurl.so.4  libnghttp2.so.14  librtmp.so.1
src/libcurl/_platform/_macos/: __init__.py
src/libcurl/_platform/_osx/: __init__.py
src/libcurl/_platform/_windows/: __init__.py
tests/: __init__.py  __main__.py  _notes_.txt  _result_examples_.txt  _result_tests_.txt  _results_.txt  globalconfig.py_  runtests.md  runtests.py_  runtests_old.py_  sprinter.py  test_libtest.py  test_main.py  tman_examples.py
tests/http/clients/: Makefile.inc  curl_setup.py  curl_utils.py  h2-pausing.py  h2-serverpush.py  h2-upgrade-extreme.py  hx-download.py_  hx-upload.py_  tls-session-reuse.py  upload-pausing.py  utils.py  ws-data.py_  ws-pingpong.py
tests/inp_dir/: cookie_jar1903  cookie_jar506  sdpf_file568
tests/libtest/: .test_one.cmd  .test_one.py  _notes_.diff  _tutil.py  curl_setup.py  curl_test.py  curl_trace.py  curl_utils.py  lib1156.py  lib1301.py  lib1308.py  lib1485.py  lib1500.py  lib1501.py  lib1502.py  lib1506.py  lib1507.py  lib1508.py  lib1509.py  lib1510.py  lib1511.py  lib1512.py  lib1513.py  lib1514.py  lib1515.py  lib1517.py  lib1518.py  lib1520.py  lib1522.py  lib1523.py  lib1525.py  lib1526.py  lib1527.py  lib1528.py  lib1529.py  lib1530.py  lib1531.py  lib1532.py  lib1533.py  lib1534.py  (+222 more)
tests/relative/: sprinter.py
tests/testenv/: _diff.txt  _diff_txt_.diff  _diff_txt_1.diff  devtest.py_  directories.py  ftpserver.py_  getpart.py_  http-server.py_  http2-server.py_  http3-server.py_  memanalyze.py  mk-bundle.pl  pathhelp.py_  processhelp.py_  rtsp_server.py  runner.py_  secureserver.py_  serverhelp.py_  servers.py_  sshhelp.py_  sshserver.py_  testcurl.py_  testutil.py_  tftp_server.py  valgrind.py_
tests/tests.c/: _diff_txt_.diff  sprinter.c.dsc.txt
tests/tests.c/curl-fuzzer/: curl_test_data.py
tests/tests.c/libtest/: __diff_.cmd  __diff_.txt  first.c  test.h
tests/tests.c/relative/: sprinter.c.dsc.txt
